# templates

command-line-tool/: cookiecutter.json  requirements.txt
command-line-tool/hooks/: post_gen_project.py
command-line-tool/{{ cookiecutter.package_name }}/: README.md  mypy.ini  requirements.txt  setup.cfg  tox.ini
command-line-tool/{{ cookiecutter.package_name }}/tests/cram/: README.md
explore-datascience/: cookiecutter.json
explore-datascience/explore-{{ cookiecutter.repo_name_suffix }}/: .csvmodel.ini  .mypy.ini  README.md  requirements.txt  tox.ini
explore-datascience/explore-{{ cookiecutter.repo_name_suffix }}/.dvc/: config
explore-datascience/explore-{{ cookiecutter.repo_name_suffix }}/.mlem/: config.yaml
explore-datascience/explore-{{ cookiecutter.repo_name_suffix }}/data/final/: README.md
explore-datascience/explore-{{ cookiecutter.repo_name_suffix }}/data/processed/: README.md
explore-datascience/explore-{{ cookiecutter.repo_name_suffix }}/data/raw/: README.md
explore-datascience/explore-{{ cookiecutter.repo_name_suffix }}/src/scripts/: README.md
explore-datascience/explore-{{ cookiecutter.repo_name_suffix }}/src/visualizations/: README.md
explore-datascience/hooks/: post_gen_project.sh
fullstack/: README.md  cookiecutter.json
fullstack/hooks/: post_gen_project.py
fullstack/{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  docker-compose.yml  justfile
fullstack/{{cookiecutter.project_slug}}/backend/: .dockerignore  Dockerfile  Dockerfile.jinja  alembic.ini  pyproject.toml
fullstack/{{cookiecutter.project_slug}}/backend/app/: db.py  main.py  settings.py  tables.py
fullstack/{{cookiecutter.project_slug}}/backend/app/auth/: device.py  oidc.py
fullstack/{{cookiecutter.project_slug}}/backend/app/crud/: base.py  users.py
fullstack/{{cookiecutter.project_slug}}/backend/app/graphql/: mutations.py  queries.py  schema.py  types.py
fullstack/{{cookiecutter.project_slug}}/backend/app/routers/: users.py
fullstack/{{cookiecutter.project_slug}}/backend/app/worker/: settings.py  tasks.py
fullstack/{{cookiecutter.project_slug}}/backend/migrations/: env.py
fullstack/{{cookiecutter.project_slug}}/docker/authentik-blueprints/: README.md  oauth2-application.yaml
fullstack/{{cookiecutter.project_slug}}/docker/postgres/: init.sql
fullstack/{{cookiecutter.project_slug}}/flux/clusters/my-cluster/: apps-prod.yaml  apps-stage.yaml
fullstack/{{cookiecutter.project_slug}}/frontend/: .dockerignore  Dockerfile  codegen.ts  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
fullstack/{{cookiecutter.project_slug}}/frontend/src/: apollo.ts  main.tsx  query-client.ts  router.tsx
fullstack/{{cookiecutter.project_slug}}/frontend/src/api/: users.ts
fullstack/{{cookiecutter.project_slug}}/frontend/src/auth/: oidc.ts
fullstack/{{cookiecutter.project_slug}}/frontend/src/pages/: AuthCallback.tsx  Home.tsx
fullstack/{{cookiecutter.project_slug}}/k8s/base/: kustomization.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/base/authentik/: deployment.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/base/backend/: deployment.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/base/frontend/: deployment.yaml  kustomization.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/base/minio/: statefulset.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/base/postgres/: statefulset.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/base/redis/: kustomization.yaml  statefulset.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/base/worker/: deployment.yaml  kustomization.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/base/zitadel/: deployment.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/overlays/local/: kustomization.yaml  namespace.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/overlays/local/patches/: authentik-domain.yaml  backend-config.yaml  resources.yaml  zitadel-domain.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/overlays/prod/: kustomization.yaml  namespace.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/overlays/prod/patches/: authentik-domain.yaml  backend-config.yaml  zitadel-domain.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/overlays/prod/sealed-secrets/: README.md  kustomization.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/overlays/stage/: kustomization.yaml  namespace.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/overlays/stage/patches/: authentik-domain.yaml  backend-config.yaml  zitadel-domain.yaml
fullstack/{{cookiecutter.project_slug}}/k8s/overlays/stage/sealed-secrets/: README.md  kustomization.yaml
presentation/: cookiecutter.json
presentation/hooks/: post_gen_project.sh
presentation/{{ cookiecutter.presentation_date }}-{{ cookiecutter.presentation_slug }}/: render.py  watch.sh
presentation/{{ cookiecutter.presentation_date }}-{{ cookiecutter.presentation_slug }}/resources/: deck-packed.js  index.j2.html  light-red-dense.css
python-package/: README.md  TODO.md  cookiecutter.json  requirements.txt
python-package/hooks/: post_gen_project.py
python-package/tests/: test_commandline_entrypoints.py
python-package/{{ cookiecutter.package_name }}/: publish.sh  pyproject.toml  requirements.txt  setup.cfg  tox.ini
python-package/{{ cookiecutter.package_name }}/tests/integration/: README.md
python-package/{{ cookiecutter.package_name }}/tests/unit/: README.md
