[metadata]
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
name = {{ cookiecutter.package_name }}
long_description = file: README.md
long_description_content_type = text/markdown
version = 0

[options]
install_requires =
package_dir =
    =src
packages=find:

{% if cookiecutter.commandline_entrypoint %}
[options.entry_points]
console_scripts =
    {% if '=' in cookiecutter.commandline_entrypoint%}{{ cookiecutter.commandline_entrypoint }}{% else %}{{ cookiecutter.package_name }} = {{ cookiecutter.commandline_entrypoint }}{% endif %}
{% endif %}

[options.packages.find]
where=src
