[metadata]
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
name = {{ cookiecutter.package_name }}
long_description = file: README.md
long_description_content_type = text/markdown
version = 0

[options]
install_requires =
    {% if cookiecutter.use_pydantic %}pydantic{% endif %}
package_dir =
    =src
packages=find:

{% if cookiecutter.commandline_entrypoint %}
[options.entry_points]
console_scripts =
    __post_hook.commandline_entrypoint__
{% endif %}

[options.packages.find]
where=src
